# beginning_cpp_game

./: CMakeLists.txt  README.md
01_hello_sdl/: CMakeLists.txt  main  main.cpp
02_getting_an_image_on_the_screen/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
03_event_driven_programming/: Makefile  game.cpp  game.hpp  main.cpp
04_key_presses/: game.cpp  game.hpp  main.cpp
05_optimized_surface_loading_and_soft_stretching/: game.cpp  game.hpp  main.cpp
06_extension_libraries_and_loading_other_image_formats/: 06_extension_libraries_and_loading_other_image_formats.cpp  game.cpp  game.hpp  main.cpp
07_texture_loading_and_rendering/: Makefile  game.cpp  game.hpp  main.cpp
cmake/: Sanitizers.cmake
examples/: main.cpp
sdl-test/: CMakeLists.txt
